création et stylisation des button

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        
 
+        <input class="button1" type="submit" value="Recherche Google">
+        <input class="button2" type="submit" value="J'ai de la chance">
 
     </body>
 </html>
