--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
 
+
+        <input type="text" id="search">
+
         <input class="button1" type="submit" value="Recherche Google">
         <input class="button2" type="submit" value="J'ai de la chance">
 
