Amelioration barre de recherche

--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="main">
+            <img src="img/logo-google.png" alt="" class="logo-google">
 
+            <div class="around-search">
+                <a href="#">
+                    <img src="img/magnifyingglass.PNG" alt="" class="before-after-search">
+                </a>
 
-        <input type="text" id="search">
+                <input type="text" id="search">
 
-        <input class="button1" type="submit" value="Recherche Google">
-        <input class="button2" type="submit" value="J'ai de la chance">
+                <a href="#" desc="a">
+                    <img src="img/vocal_search.PNG" alt="" class="before-after-search">
+                </a>
+            </div>
 
+            <input class="button1" type="submit" value="Recherche Google">
+            <input class="button2" type="submit" value="J'ai de la chance">
+         </div>
     </body>
 </html>
