Finissions du site

--- a/index.html
+++ b/index.html
@@ -8,23 +8,57 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
+
+        <div class="personal-navbar">
+            <a href="#" class="gmail">Gmail</a>
+            <a href="#">Images</a>
+            <img src="img/functions_google.PNG" alt="" class="functions-google">
+            <img src="img/account-online.png" alt="" class="account-online">
+        </div>
         <div class="main">
-            <img src="img/logo-google.png" alt="" class="logo-google">
+
+            <div class="logo-content">
+                <img src="img/logo-google.png" alt="" class="logo-google">
+                
+            </div>
 
             <div class="around-search">
                 <a href="#">
-                    <img src="img/magnifyingglass.PNG" alt="" class="before-after-search">
+                    <img src="img/magnifyingglass.PNG" alt="" class="before-search">
                 </a>
 
                 <input type="text" id="search">
 
                 <a href="#" desc="a">
-                    <img src="img/vocal_search.PNG" alt="" class="before-after-search">
+                    <img src="img/vocal_search.PNG" alt="" class="after-search" title="Utiliser la recherche vocale">
                 </a>
             </div>
+            <div class="buttons">
+                <input class="button1" type="submit" value="Recherche Google">
+                <input class="button2" type="submit" value="J'ai de la chance">
+            </div>
 
-            <input class="button1" type="submit" value="Recherche Google">
-            <input class="button2" type="submit" value="J'ai de la chance">
-         </div>
+        </div>
+        
+        <div class="footer">
+            <div class="pays">
+                France
+            </div>
+            <div class="row">
+                <div class="row1">
+                    <a href="#">Publication judiciaire</a>
+                    <a href="#">Info consommateurs</a>
+                    <a href="#">Confidentialité</a>
+                    <a href="#">Conditions</a>
+                    <a href="#">Paramètres</a>
+                </div>
+                <div class="row2">
+                    <a href="#">Publicité</a>
+                    <a href="#">Entreprise</a>
+                    <a href="#">À propos</a>
+                    <a href="#">Comment fonctionne la recherche Google ?</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
