Add covid-19 and icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Google</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="img/icon.png" type="image/png"/>
     </head>
     <body>
 
@@ -38,6 +39,9 @@
                 <input class="button2" type="submit" value="J'ai de la chance">
             </div>
 
+            <div class="covid-around"> 
+                <a href="#" class="covid">Coronavirus : en savoir plus sur les actions mises en place par Google</a>
+            </div>
         </div>
         
         <div class="footer">
