--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Google</title>
+        <title>FakeSh</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="img/icon.png" type="image/png"/>
+        <link rel="shortcut icon" href="img/icon-fakesh.png" type="image/png"/>
     </head>
     <body>
 
@@ -17,9 +17,8 @@
             <img src="img/account-online.png" alt="" class="account-online">
         </div>
         <div class="main">
-
             <div class="logo-content">
-                <img src="img/logo-google.png" alt="" class="logo-google">
+                <img src="img/logo-fakesh.png" alt="" class="logo-google">
                 
             </div>
 
@@ -31,16 +30,16 @@
                 <input type="text" id="search">
 
                 <a href="#" desc="a">
-                    <img src="img/vocal_search.PNG" alt="" class="after-search" title="Utiliser la recherche vocale">
+                    <img src="img/vocal_search-fakesh.PNG" alt="" class="after-search" title="Utiliser la recherche vocale">
                 </a>
             </div>
             <div class="buttons">
-                <input class="button1" type="submit" value="Recherche Google">
+                <input class="button1" type="submit" value="Recherche FakeSh">
                 <input class="button2" type="submit" value="J'ai de la chance">
             </div>
 
             <div class="covid-around"> 
-                <a href="#" class="covid">Coronavirus : en savoir plus sur les actions mises en place par Google</a>
+                <a href="#" class="covid">Coronavirus : en savoir plus sur les actions mises en place par FakeSh</a>
             </div>
         </div>
         
@@ -60,7 +59,7 @@
                     <a href="#">Publicité</a>
                     <a href="#">Entreprise</a>
                     <a href="#">À propos</a>
-                    <a href="#">Comment fonctionne la recherche Google ?</a>
+                    <a href="#">Comment fonctionne la recherche FakeSh ?</a>
                 </div>
             </div>
         </div>
